add image constraints and second viewcontroller

--- a/ScotiabankAssignment/Base.lproj/Main.storyboard
+++ b/ScotiabankAssignment/Base.lproj/Main.storyboard
@@ -10,19 +10,36 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScotiabankAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="ScotiabankAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoubleEclipse_Legault_1080" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-m4-ZH0">
+                                <rect key="frame" x="-63" y="328" width="540" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="p9l-ls-4WV"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="D16-cz-M6X"/>
+                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vNg-ab-Vw6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="nasaImageHeightConstraint" destination="p9l-ls-4WV" id="k0I-K0-l1b"/>
+                        <outlet property="nasaImageView" destination="PQd-m4-ZH0" id="owX-Uq-AgO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="o9W-62-Ew7">
@@ -40,4 +57,7 @@
             <point key="canvasLocation" x="896" y="116"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="DoubleEclipse_Legault_1080" width="540" height="304"/>
+    </resources>
 </document>
