--- a/ScotiabankAssignment/Base.lproj/Main.storyboard
+++ b/ScotiabankAssignment/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6vu-HM-VUh">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,17 +18,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoubleEclipse_Legault_1080" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-m4-ZH0">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoubleEclipse_Legault_1080" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-m4-ZH0">
                                 <rect key="frame" x="-63" y="328" width="540" height="240"/>
+                                <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="240" id="p9l-ls-4WV"/>
                                 </constraints>
                             </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="HTa-Mw-yoG">
+                                <rect key="frame" x="20" y="621" width="374" height="286"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0m-hb-0Xt">
+                                <rect key="frame" x="0.0" y="351" width="414" height="217"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="executeTransition:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c5r-hp-zRJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="D16-cz-M6X"/>
-                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vNg-ab-Vw6"/>
+                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KbG-2A-c1Z"/>
+                            <constraint firstItem="PQd-m4-ZH0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="v0q-am-4sx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -41,20 +58,39 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="o9W-62-Ew7">
             <objects>
-                <viewController id="6vu-HM-VUh" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="secondViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6vu-HM-VUh" customClass="SecondViewController" customModule="ScotiabankAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4ox-pE-vN0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoubleEclipse_Legault_1080" translatesAutoresizingMaskIntoConstraints="NO" id="32m-s5-RdH">
+                                <rect key="frame" x="-63" y="0.0" width="540" height="896"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1A-fT-zVj">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="32m-s5-RdH" firstAttribute="centerX" secondItem="4ox-pE-vN0" secondAttribute="centerX" id="FAh-bt-Gtx"/>
+                            <constraint firstItem="n1A-fT-zVj" firstAttribute="trailing" secondItem="dCa-Jd-4Rr" secondAttribute="trailing" id="H1s-W9-cvY"/>
+                            <constraint firstItem="32m-s5-RdH" firstAttribute="top" secondItem="4ox-pE-vN0" secondAttribute="top" id="NMb-KB-DNV"/>
+                            <constraint firstAttribute="bottom" secondItem="n1A-fT-zVj" secondAttribute="bottom" id="NjT-jX-GwD"/>
+                            <constraint firstAttribute="bottom" secondItem="32m-s5-RdH" secondAttribute="bottom" id="Rfa-Xr-ftn"/>
+                            <constraint firstItem="32m-s5-RdH" firstAttribute="centerY" secondItem="4ox-pE-vN0" secondAttribute="centerY" id="YLK-tM-qRK"/>
+                            <constraint firstItem="n1A-fT-zVj" firstAttribute="leading" secondItem="dCa-Jd-4Rr" secondAttribute="leading" id="uzz-Nd-Jew"/>
+                            <constraint firstItem="n1A-fT-zVj" firstAttribute="top" secondItem="4ox-pE-vN0" secondAttribute="top" id="xrS-6V-3bg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dCa-Jd-4Rr"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tGd-Ig-T30" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="896" y="116"/>
+            <point key="canvasLocation" x="895.6521739130435" y="115.84821428571428"/>
         </scene>
     </scenes>
     <resources>
